--- a/github/compile.yml
+++ b/github/compile.yml
@@ -9,10 +9,10 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
       - name: Compile DLL
         run: |
-          cl.exe /LD /EHsc /O2 Sovereign_HFT_Core_FINAL.cpp /link /out:Sovereign_HFT_Core.dll
+          cl.exe /LD /EHsc /O2 *.cpp /link /out:Sovereign_HFT_Core.dll
       - name: Upload DLL
         uses: actions/upload-artifact@v4
         with:
           name: Sovereign-DLL
           path: Sovereign_HFT_Core.dll
-          
+
