--- a/github/workflows/compile.yml
+++ b/github/workflows/compile.yml
@@ -1,18 +1,18 @@
-name: Build HFT DLL
+name: Build DLL
 on: [push]
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup MSVC
         uses: ilammy/msvc-dev-cmd@v1
-      - name: Compile DLL
+      - name: Compile
         run: |
-          cl.exe /LD /EHsc /O2 Sovereign_HFT_Core_FINAL.cpp /link /out:Sovereign_HFT_Core.dll
-      - name: Upload DLL
-        uses: actions/upload-artifact@v3
+          cl.exe /LD /EHsc /O2 core.cpp /link /out:Sovereign_HFT_Core.dll
+      - name: Upload
+        uses: actions/upload-artifact@v4
         with:
           name: Sovereign-DLL
           path: Sovereign_HFT_Core.dll
-          
+
